# template-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  conda-env.yaml  main_run.py  pyproject.toml  setup.cfg
configs/: config.yaml  default_config.yaml
configs/hydra/: default.yaml
configs/paths/: default.yaml
src/: experiment_manager.py
src/methods/: base_method.py
src/pipelines/: base_pipeline.py
src/utils/: __init__.py  logger.py  utils.py
