[tool.poetry]
name = "template-python-project"
version = "0.1.0"
description = ""
authors = ["Hoang Le <hminle@yorku.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
hydra-core = "^1.2.0"
pywinauto = "^0.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
